--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
 <body>
   <div id="app"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.js"></script>
+
+  <p> this is small change</p>
 </body>
 
 </html>
